Added non-native font

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 #resume {
 	font-family: lucida sans typewriter, courier new, monospace;
 }
+#school{
+	font-family: 'Patua One', century gothic, cursive;
+}
