--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #resume {
 	font-family: lucida sans typewriter, courier new, monospace;
 }
-#school, school > table{
+#school, school > td{
 	font-family: 'Patua One', century gothic, cursive;
 }
 
