--- a/style.css
+++ b/style.css
@@ -28,12 +28,16 @@
 #navigation-item{
 	float: left;
 	padding: 0.5em;
+}
+#navigation-item a{
+	display: block;
+	text-decoration: none;
 	color: grey;
 	text-align: center;
 }
-#navigation-item:a{
-	display: block;
-	text-decoration: none;
+#navigation-item a:hover{
+	border-radius: 0.25em;
+	color: light grey;
 }
 
 #wrapper{
