--- a/style.css
+++ b/style.css
@@ -1,23 +1,14 @@
-#resume {
-	font-family: lucida sans typewriter, courier new, monospace;
-	position: relative;
+#wrapper{
+	width:960px;
+	background-repeat: no-repeat;
+  background: linear-gradient(#FFFFC8 0,#FFDB98 100%) fixed;
+	margin-left: auto;
+	margin-right: auto;
+}
+#wrapper > *{
+	width:100%;
 }
 
-.education{
-	font-family: 'Patua One', century gothic, cursive;
-	position: relative;
-	height: 50%;
-	width: 100%;
-}
-#college{
-	position: absolute;
-	border:dashed 1px grey;
-}
-#high-school{
-	position: absolute;
-	right: 0;
-	border:dashed 1px red;
-}
 
 #navigation-bar{
 	list-style-type: none;
@@ -39,18 +30,34 @@
 	border-radius: 0.25em;
 	color: light grey;
 }
-
-#wrapper{
-	width:960px;
-	background-repeat: no-repeat;
-  background: linear-gradient(#FFFFC8 0,#FFDB98 100%) fixed;
-	margin-left: auto;
-	margin-right: auto;
-}
-#wrapper > *{
-	width:100%;
+#resume {
+	font-family: lucida sans typewriter, courier new, monospace;
+	position: relative;
 }
 
+
+.education{
+	font-family: 'Patua One', century gothic, cursive;
+	position: relative;
+	width: 100%;
+}
+#college{
+	position: absolute;
+	border:dashed 1px grey;
+}
+#high-school{
+	position: absolute;
+	right: 0;
+	border:dashed 1px red;
+}
+
+
+.experience{
+	position: relative;
+	color: #E8FF99;
+}
+	
+	
 .official{
 	font-family: 'Special Elite', courier new, monospace;
 	text-align: center;
@@ -61,4 +68,8 @@
 
 .data, data>td{
 	border: solid 1px purple;
+}
+
+#set-right{
+	float: right;
 }
