--- a/style.css
+++ b/style.css
@@ -23,12 +23,12 @@
 #navigation-item a{
 	display: block;
 	text-decoration: none;
-	color: grey;
+	background-color: grey;
 	text-align: center;
 }
 #navigation-item a:hover{
 	border-radius: 0.25em;
-	color: light grey;
+	background-color: red;
 }
 #resume {
 	font-family: lucida sans typewriter, courier new, monospace;
@@ -40,6 +40,8 @@
 	font-family: 'Patua One', century gothic, cursive;
 	position: relative;
 	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
 }
 #college{
 	position: absolute;
