--- a/style.css
+++ b/style.css
@@ -28,13 +28,15 @@ nav#navigation-bar ul li a{
 	text-align: center;
 	padding: 0.5em;
 }
-#navigation-item a:hover{
+nav#navigation-bar ul li a:hover{
 	border-radius: 0.25em;
 	background-color: red;
 }
+
 #resume {
 	font-family: lucida sans typewriter, courier new, monospace;
 	position: relative;
+	clear: both;
 }
 
 
