Experimenting with setting section positions relative

--- a/style.css
+++ b/style.css
@@ -76,8 +76,10 @@ nav#navigation-bar ul li a:hover{
 	font-family: 'Gloria Hallelujah', courier new, cursive;
 }
 
-.data, data>*{
+.data{
 	border: solid 1px purple;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #set-right{
