--- a/style.css
+++ b/style.css
@@ -106,6 +106,20 @@ nav#navigation-bar ul li a:hover{
 	border: dashed violet 1px;
 }
 
+#image-break{
+	width: 100%;
+	height: 20px;
+	padding: -0.2em;
+	background-color: purple;
+	border: solid green 1px;
+}
+#image-break-patter{
+	width: 20%;
+	height: 75%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 #set-right{
 	float: right;
 }
