--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav#navigation-bar ul li a:hover{
 }
 
 /*reused*/
-.data{
+#data{
 	border: solid 1px purple;
 	margin-left: auto;
 	margin-right: auto;
