--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ nav#navigation-bar ul li a:hover{
 }
 
 #image-break{
+	position: relative;
 	width: 100%;
 	height: 70px;
 	padding: 0.2em;
@@ -119,6 +120,7 @@ nav#navigation-bar ul li a:hover{
 	height: 75%;
 	margin-left: auto;
 	margin-right: auto;
+	position: absolute;
 }
 
 
