--- a/style.css
+++ b/style.css
@@ -134,10 +134,12 @@ nav#navigation-bar ul li a:hover{
 }
 
 .idea{
+	margin-left: auto;
+	margin-right: auto;
 	color: brown;
 	background-color: white;
-	padding: 5em;
-	border-radius: 10em;
+	padding: 1em;
+	border-radius: 5em;
 }
 
 nav#links ul {
