--- a/style.css
+++ b/style.css
@@ -108,7 +108,8 @@ nav#navigation-bar ul li a:hover{
 }
 
 #image-break{
-	position: relative;
+	margin-left: auto;
+	margin-right: auto;
 	width: 100%;
 	height: 70px;
 	padding: 0.2em;
@@ -116,7 +117,7 @@ nav#navigation-bar ul li a:hover{
 	border: solid cyan 5px;
 }
 #image-break-cap{
-	font-color: orange;
+	color: orange;
 	font-size: 10em;
 	text-align: center;
 }
