--- a/style.css
+++ b/style.css
@@ -6,7 +6,13 @@
 	margin-left: auto;
 	margin-right: auto;
 }
-
+#fluid{
+	width: 100%;
+	background-repeat: no-repeat;
+  background: linear-gradient(#FF78FF 0,#0078FF 100%) fixed;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 /*reused*/
 nav#navigation-bar ul {
