Added a border to links section so I can see what's going on

--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ nav#navigation-bar ul li a:hover{
 
 #links{
 	position: relative;
+	border: solid black 1px;
 }
 section#links ul {
 	list-style-type: none;
