--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ nav#navigation-bar ul li a:hover{
 	border: dashed violet 1px;
 }
 
-#image-break{
+.image-break{
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
@@ -138,7 +138,7 @@ nav#navigation-bar ul li a:hover{
 	background-color: purple;
 	border: solid cyan 5px;
 }
-#image-break-cap{
+.image-break-cap{
 	margin: 0;
 	color: orange;
 	font-size: 5em;
