--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 nav#navigation-bar ul {
 	
 	list-style-type: none;
-	margin: 0 auto;S
+	margin: 0 auto;
 	padding: 0;
 	overflow: hidden;
 	text-align: center;
