--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
 
 /*reused*/
 nav ul {
-	
 	list-style-type: none;
 	margin: 0 auto;
 	padding: 0;
@@ -28,6 +27,7 @@ nav ul li{
 	
 }
 nav ul li a{
+	margin-top: 1rem;
 	display: inline-block;
 	text-decoration: none;
 	background-color: orange;
@@ -75,6 +75,7 @@ nav ul li a:hover{
 /*reused*/	
 .official{
 	font-family: 'Special Elite', 'courier new', monospace;
+	font-size: 3rem;
 	text-align: center;
 }
 /*reused*/
@@ -82,6 +83,7 @@ nav ul li a:hover{
 	font-family: 'Gloria Hallelujah', 'courier new', cursive;
 	text-align: center;
 	color: navy;
+	font-size: .7rem;
 }
 
 /*reused*/
@@ -102,7 +104,7 @@ nav ul li a:hover{
 }
 /*reused*/
 .block{
-	float: right;
+	clear: both;
 	background-color: #007849;
 	color: white;
 	padding: 2em;
@@ -127,14 +129,14 @@ nav ul li a:hover{
 	display: block;
 	padding: 0.5em;
 	margin: 0 auto;
-	border: dashed violet 1px;
+	border: dashed indigo 1px;
 }
 
 .image-break{
 	clear: both;
 	margin-left: auto;
 	margin-right: auto;
-	width: 100%;
+	width: 95%;
 	height: 20%;
 	padding: 0.2em;
 	background-color: purple;
@@ -143,7 +145,7 @@ nav ul li a:hover{
 .image-break-cap{
 	margin: 0;
 	color: orange;
-	font-size: 5em;
+	font-size: 3em;
 	text-align: center;
 }
 
