--- a/style.css
+++ b/style.css
@@ -76,7 +76,10 @@ nav ul li a:hover{
 	font-family: 'Gloria Hallelujah', 'courier new', cursive;
 	text-align: center;
 	color: navy;
-	font-size: .7rem;
+	font-size: 1.2rem;
+	padding: .7rem;
+	margin: 1rem;
+}
 }
 /*reused*/
 #data{
@@ -131,12 +134,14 @@ nav ul li a:hover{
 	padding: 0.2em;
 	background-color: purple;
 	border: solid cyan 5px;
+	margin: 1rem;
 }
 .image-break-cap{
 	margin: 0;
 	color: orange;
 	font-size: 3em;
 	text-align: center;
+	padding-bottom:.5rem;
 }
 #set-right{
 	float: right;
