--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ nav ul li a:hover{
 	position: relative;
 	border:dashed 1px grey;
 	margin: 1rem;
+	padding: 1rem;
 }
 #high-school{
 	position: relative;
@@ -97,6 +98,9 @@ nav ul li a:hover{
 	border: solid 1px cyan;
 	margin-left: auto;
 	margin-right: auto;
+}
+table{
+	margin: 0 auto;
 }
 /*reused*/
 .block{
@@ -159,6 +163,7 @@ nav ul li a:hover{
 	padding: 2rem;
 }
 .idea{
+	clear: both;
 	margin-left: auto;
 	margin-right: auto;
 	color: brown;
