--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 #wrapper{
 	width:960px;
 	background-repeat: no-repeat;
-  background: linear-gradient(#FFFFC8 0,#FFD674 100%) fixed;
+  background: linear-gradient(#FFFFC8 0,#FF8E00 100%) fixed;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -61,6 +61,7 @@ nav ul li a:hover{
 	margin-left: auto;
 	margin-right: auto;
 	padding: 1rem;
+	width: 100%;
 }
 #high-school{
 	position: relative;
@@ -111,8 +112,8 @@ table{
 	position: fixed;
 	background-color: #007849;
 	color: white;
-	padding: 2em;
-	width: 10%;
+	padding: 1em;
+	width: 7%;
 	margin-left: -10rem;
 }
 #dog{
