--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 }
 /*reused*/
 nav ul {
+	clear: both;
 	list-style-type: none;
 	margin: 0 auto;
 	padding: 0;
@@ -115,6 +116,7 @@ table{
 	padding: 1em;
 	width: 7%;
 	margin-left: -10rem;
+	float: right;
 }
 #dog{
 	display: block;
