--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav ul li a:hover{
 	text-align: center;
 	clear: both;
 }
-.education{
+.heavySharp{
 	text-align: center;
 	font-family: 'Patua One', 'century gothic', cursive;
 	position: relative;
@@ -82,7 +82,6 @@ nav ul li a:hover{
 	font-size: 1.2rem;
 	padding: .7rem;
 	margin: 1rem;
-}
 }
 /*reused*/
 #smallData{
