--- a/styleWithQueries.css
+++ b/styleWithQueries.css
@@ -25,6 +25,7 @@
 		padding: 1rem;
 		background-color: rgba(240, 0, 0, 0.3);
 	}
+}
 @media screen and (min-width: 1024px) {
 	#wrapper{
 		width:960px;
