--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -25,12 +25,7 @@
 		padding: 1rem;
 		background-color: rgba(240, 0, 0, 0.3);
 	}
-	#nav-button{
-		background-color: red;
-	}
 	nav {
-		position: absolute;
-		right: 9000px;
 		padding: 1rem;
 		background-color: red;
 		color: white;
@@ -45,7 +40,7 @@
 	}
 	nav ul li a{
 		margin-top: 1rem;
-		display: block;
+		display: inline-block;
 		text-decoration: none;
 		background-color: orange;
 		color: white;
@@ -87,9 +82,6 @@
 		background: linear-gradient(#FFFFC8 0,#FF8E00 100%) fixed;
 		margin-left: auto;
 		margin-right: auto;
-	}
-	#nav-button{
-		display: none;
 	}
 	nav ul {
 		clear: both;
