--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -47,6 +47,10 @@
 	}
 	#nav-button{
 		background-color: red;
+		margin: 1rem;
+		height: 30px;
+		width: 60px;
+		display: block;
 	}
 	nav {
 		position: absolute;
