--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -46,14 +46,15 @@
 		background-color: rgba(240, 0, 0, 0.3);
 	}
 	#nav-button{
-		background-color: red;
-		margin: 1rem;
-		height: 30px;
-		width: 60px;
 		display: block;
+		background-color: red;
+		text-align: center;
+		height: 30px;
+		color: white;
+		margin: 1rem;
 	}
 	nav {
-		position: absolute;
+		position: relative;
 		right: 9000px;
 		padding: 1rem;
 		background-color: red;
