--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -66,7 +66,12 @@
 		overflow: hidden;
 		text-align: center;
 	}
-	nav ul li a{
+	.dropdownLinks {
+		display: none;
+		position: absolute;
+		z-index: 1;
+	}
+	.dropdownLinks a{
 		margin-top: 1rem;
 		display: block;
 		text-decoration: none;
@@ -75,9 +80,12 @@
 		text-align: center;
 		padding: 0.5em;
 	}
-	nav ul li a:hover{
+	.dropdownLinks a:hover{
 		border-radius: 0.25em;
 		background-color: red;
+	}
+	.show {
+		display: block;
 	}
 	
 	#resume {
