--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -17,6 +17,10 @@
 	li{
 		list-style-type: square;
 		margin: 1rem;
+		font-size: 1.6rem;
+	}
+	header{
+		position: relative;
 	}
 	#wrapper{
 		width: 100%;
@@ -26,7 +30,7 @@
 		margin-right: auto;
 	}
 	th, td {
-		font-size: 1.5rem;
+		font-size: 1.6rem;
 		padding: .5rem;
 	}
 	#dottedBox{
@@ -55,7 +59,6 @@
 	}
 	nav {
 		padding: 1rem;
-
 		color: white;
 	}
 	nav ul {
