--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -53,9 +53,9 @@
 		display: block;
 		background-color: red;
 		text-align: center;
-		height: 30px;
+		height: 300px;
 		color: white;
-		/*margin: 1rem;*/
+		margin: 1rem;
 	}
 	nav {
 		padding: 1rem;
