--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -49,7 +49,7 @@
 		padding: 1rem;
 		background-color: rgba(240, 0, 0, 0.3);
 	}
-	#nav-button{
+	#sandwich{
 		display: inline;
 		/*background-color: red;
 		text-align: center;
