--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -50,12 +50,13 @@
 		background-color: rgba(240, 0, 0, 0.3);
 	}
 	#sandwich{
-		display: inline;
-		/*background-color: red;
+		display: block;
+		background-color: red;
 		text-align: center;
-		height: 300px;
+		/*height: 300px;
 		color: white;
-		margin: 1rem;*/
+		margin: 1rem;
+		font-size: 2rem*/
 	}
 	nav {
 		padding: 1rem;
