nullified some style tags to clarify what's going wrong

--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -59,7 +59,7 @@
 		margin: 1rem;
 		font-size: 2rem*/
 	}
-	nav {
+	/*nav {
 		padding: 1rem;
 		color: white;
 	}
@@ -94,7 +94,7 @@
 	}
 	.show {
 		display: block;
-	}
+	}*/
 	
 	#resume {
 		font-family: 'lucida sans typewriter', 'courier new', monospace;
@@ -146,7 +146,7 @@
 		margin-left: auto;
 		margin-right: auto;
 	}
-	.sandwich{
+	/*.sandwich{
 		display: none;
 	}
 	nav ul {
@@ -172,7 +172,7 @@
 	nav ul li a:hover{
 		border-radius: 0.25em;
 		background-color: red;
-	}
+	}*/
 	#resume {
 		font-family: 'lucida sans typewriter', 'courier new', monospace;
 		position: relative;
