--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -50,7 +50,7 @@
 		background-color: rgba(240, 0, 0, 0.3);
 	}
 	.sandwich{
-		display: block;
+		/*display: block;*/
 		background-color: red;
 		text-align: center;
 		height: 300px;
