Both versions have a button now

--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -50,16 +50,16 @@
 		background-color: rgba(240, 0, 0, 0.3);
 	}
 	.sandwich{
-		/*display: block;*/
+		display: block;
 		background-color: red;
 		text-align: center;
 		height: 300px;
 		width: 100%;
-		/*color: white;
+		color: white;
 		margin: 1rem;
-		font-size: 2rem*/
+		font-size: 2rem
 	}
-	/*nav {
+	nav {
 		padding: 1rem;
 		color: white;
 	}
@@ -94,7 +94,7 @@
 	}
 	.show {
 		display: block;
-	}*/
+	}
 	
 	#resume {
 		font-family: 'lucida sans typewriter', 'courier new', monospace;
@@ -146,8 +146,15 @@
 		margin-left: auto;
 		margin-right: auto;
 	}
-	/*.sandwich{
-		display: none;
+	.sandwich{
+		display: block;
+		background-color: red;
+		text-align: center;
+		height: 300px;
+		width: 100%;
+		color: white;
+		margin: 1rem;
+		font-size: 2rem
 	}
 	nav ul {
 		clear: both;
@@ -172,7 +179,7 @@
 	nav ul li a:hover{
 		border-radius: 0.25em;
 		background-color: red;
-	}*/
+	}
 	#resume {
 		font-family: 'lucida sans typewriter', 'courier new', monospace;
 		position: relative;
