Every page has the same dynamic menu

--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -1,6 +1,6 @@
 @media screen and (max-device-width: 480px) and (orientation: portrait) {
 	p, h1, h2, h3, td, div, th, ul, tr, table{
-		margin: 2rem;
+		margin: 1rem;
 	}
 	h1{
 		font-size: 2rem;
@@ -9,7 +9,7 @@
 		font-size: 1.8rem;
 	}
 	p, h3{
-		font-size: 1.6rem;
+		font-size: 1.7rem;
 	}
 	h1, h2, h3, th{
 		font-weight: bold;
@@ -402,4 +402,12 @@
 		text-align: center;
 		font-weight: 400;
 	}
+	.handwriting{
+	font-family: 'Gloria Hallelujah', 'courier new', cursive;
+	text-align: center;
+	color: navy;
+	font-size: 1.2rem;
+	padding: .7rem;
+	margin: 1rem;
+}
 }
