--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -409,5 +409,14 @@
 	font-size: 1.2rem;
 	padding: .7rem;
 	margin: 1rem;
-}
+	}
+	#map {
+    height: 100%;
+  }
+      /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 100%;
+		margin: 0;
+    padding: 0;
+  }
 }
