--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -270,11 +270,11 @@
 	.text {
 		color: #f2f2f2;
 		font-size: 15px;
-		padding: 8px 12px;
+		padding: 12px;
 		position: absolute;
-		bottom: 8px;
 		width: 100%;
 		text-align: center;
+		background-color: black;
 	}
 
 /* Number text (1/3 etc) */
@@ -339,6 +339,8 @@
 	}
 	.picShow {
 		width: 50%;
+		display: block;
+		margin: 0 auto;
 	}
 	.image-break{
 		clear: both;
