--- a/css/styleWithQueries.css
+++ b/css/styleWithQueries.css
@@ -429,10 +429,10 @@
 	#map {
     height: 100%;
   }
-      /* Optional: Makes the sample page fill the window. */
-  html, body {
-    height: 100%;
-		margin: 0;
-    padding: 0;
-  }
+	#canvas {
+			width: 700px;
+			height: 500px;
+			background-color: #ccc;
+			margin: 30px auto;
+		}
 }
